--- a/frontend/connexion/style.css
+++ b/frontend/connexion/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(120deg, #6dd5fa, #2980b9);
+  background: linear-gradient(120deg, #2980b9, #6dd5fa);
   height: 100vh;
   margin: 0;
   display: flex;
@@ -38,7 +38,6 @@ label i {
   color: #2980b9;
 }
 
-input[type="text"],
 input[type="email"],
 input[type="password"] {
   width: 100%;
@@ -50,7 +49,6 @@ input[type="password"] {
   font-size: 1em;
 }
 
-input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
   border-color: #2980b9;
@@ -74,7 +72,7 @@ button:hover {
   background-color: #2573a6;
 }
 
-#message {
+#loginMessage {
   margin-top: 15px;
   text-align: center;
   color: red;
